# dtu_mlops

./: .gitignore  cloudbuild.yaml  mlops-447114-e86fdc29f123.json  rita_sucks.txt
mlops_day2/: .gitignore  LICENSE  README.md  data.dvc  pyproject.toml  requirements.txt  tasks.py
mlops_day2/.dvc/: config
mlops_day2/configs/: cloudbuild.yaml  config.yaml  config_cpu.yaml
mlops_day2/dockerfiles/: api.dockerfile  train-cloud.dockerfile  train.dockerfile
mlops_day2/docs/: mkdocs.yaml
mlops_day2/docs/source/: index.md
mlops_day2/google-cloud/: cloud.dockerfile  cloudbuild.yaml  requirements.txt
mlops_day2/src/mlops_day2/: api.py  data.py  evaluate.py  get_model_artifact.py  model.py  train.py  train_cloud.py  train_sweep.py  visualize.py
mlops_day2/tests/: test_data.py
mlops_day2/wandb/: latest-run
mlops_day2/wandb/run-20250109_120813-vk071dke/: run-vk071dke.wandb
mlops_day2/wandb/run-20250109_121050-gyo57whj/: run-gyo57whj.wandb
mlops_day2/wandb/run-20250109_121407-eb0ts9to/: run-eb0ts9to.wandb
mlops_day2/wandb/run-20250109_121712-f3vebqcw/: run-f3vebqcw.wandb
mlops_day2/wandb/run-20250109_124531-m2iv5cri/: run-m2iv5cri.wandb
mlops_day2/wandb/run-20250109_125932-xto1sw87/: run-xto1sw87.wandb
mlops_day2/wandb/run-20250109_130452-fa9tydpv/: run-fa9tydpv.wandb
mlops_day2/wandb/run-20250109_131047-cjdm105a/: run-cjdm105a.wandb
mlops_day2/wandb/run-20250109_131326-7jqu04zx/: run-7jqu04zx.wandb
mlops_day2/wandb/run-20250109_135125-safwmbl4/: run-safwmbl4.wandb
mlops_day2/wandb/run-20250109_135746-ha8ss1av/: run-ha8ss1av.wandb
(+136 files in other folders)
